* The world list should now update if copying or renaming worlds in-game
* Resource packs and skins menu now use the standardised menu look
* Pre-releases are now ignored from version check
* Renamed shear to shears
* Saplings should no longer grow if an entity is on it
* Made cloud cactus into an ore you can mine and use
* Fixed air wizard spawner
* Fixed player spawning outside the map
- Removed texture packs
- Removed suits
- Removed second air wizard
- Removed option of changing skin in the options display because of a crash.

-------------------------------------------------------------------------
- Made make-versions be treated as patches to already existing versions -
-------------------------------------------------------------------------

Minicraft+ version 2.0.7

+ Added sheep shearing
+ Added shear tool
+ Added potatoes
+ Added baked potatoes as food
+ Made zombies drop potatoes
+ Added inventory searcher (F to toggle and Next/Back Page to seek)
+ Added fullscreen mode (default key F11)
+ Added Indonesian localization
+ Added Hungarian localization
+ Added SRV record support; service name is _minicraft (only accessable through code)
+ Added aggregate analytics for various game states and actions
+ Added new skin system with custom skin support
+ Added Built-in Contest Winners' Skins into the Skins Menu
* Sparks (the airwizard bullets) have been optimised
* Fixed picked up dungeon chests
* Tiles now connect to the edge of the world
* Farm tiles will no longer be destroyed if an item is dropped onto it
* Made crops grow slower
* Updated some textures; made wood, apples and gold apples look better
* Made sheep drop beef
* Picking up furniture no longer require stamina
* Mobs no longer target you and attack you when you are in creative mode
* Fixed sound not playing on certain actions
* You can only use axes on wood walls, wood doors, and wood floor
* Shears must be used to destroy wool tiles
- Disabled multiplayer functionality

Minicraft+ version 2.0.6
